an implementation of VGG16_BN with attention blocks

--- a/notebooks/1_Exploring_models.ipynb
+++ b/notebooks/1_Exploring_models.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "1e3ef3fb-f834-4d2d-b458-6029e1f4b6b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
@@ -15,7 +24,8 @@
     "from torchsummary import summary\n",
     "import torchvision.models as models\n",
     "import torch.nn as nn\n",
-    "from networks.VGG16 import VGG16_BN\n",
+    "from networks.VGG16 import VGG16_BN, VGG16_BN_Attention\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "# To allow auto reload to this notebook after modifying any external file imported\n",
     "%load_ext autoreload\n",
@@ -24,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "d5d62b98-f465-47ab-8146-72330244e2e7",
    "metadata": {},
    "outputs": [],
@@ -2897,7 +2907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "6ed69456-36a0-4bdf-9b43-59fe586e5fce",
    "metadata": {},
    "outputs": [
@@ -2905,6 +2915,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\u001b[32m2023-11-24 22:42:27.315\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mnetworks.VGG16\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m70\u001b[0m - \u001b[1mUsing VGG16_BN with configurations: num_classes='2'\u001b[0m\n",
       "/mnt/c/Users/abdal/Documents/Master/EMJMD MAIA/SEMESTER 3 - UdG/CAD/skin-lesion-dl-classifier/env/lib/python3.10/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
       "  warnings.warn(\n",
       "/mnt/c/Users/abdal/Documents/Master/EMJMD MAIA/SEMESTER 3 - UdG/CAD/skin-lesion-dl-classifier/env/lib/python3.10/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_BN_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_BN_Weights.DEFAULT` to get the most up-to-date weights.\n",
@@ -2919,7 +2930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "1f58e5e8-fefd-4da0-80ca-76c245e8430e",
    "metadata": {},
    "outputs": [
@@ -2927,6 +2938,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "torch.Size([2, 256, 28, 28]) torch.Size([2, 512, 7, 7])\n",
       "----------------------------------------------------------------\n",
       "        Layer (type)               Output Shape         Param #\n",
       "================================================================\n",
@@ -3083,6 +3095,203 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "322a4b21-e04a-4fa6-aad1-0a1190ccc40e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2023-11-25 12:46:37.070\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mnetworks.VGG16\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m69\u001b[0m - \u001b[1mUsing VGG16_BN_Attention with configurations: num_classes='2'\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "vgg16bn_attention = VGG16_BN_Attention(num_classes=2).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c437796f-533e-4d97-a4fc-55e79c767b87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VGG16_BN_Attention(\n",
+      "  (conv_block1): Sequential(\n",
+      "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (conv_block2): Sequential(\n",
+      "    (0): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (conv_block3): Sequential(\n",
+      "    (0): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "    (6): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (7): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (8): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (conv_block4): Sequential(\n",
+      "    (0): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "    (6): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (7): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (8): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (conv_block5): Sequential(\n",
+      "    (0): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "    (6): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (7): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (8): ReLU(inplace=True)\n",
+      "  )\n",
+      "  (attention_block1): AttentionBlock(\n",
+      "    (conv_blockF): Conv2d(256, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "    (conv_blockG): Conv2d(512, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "    (conv_attenM): Conv2d(256, 1, kernel_size=(1, 1), stride=(1, 1))\n",
+      "    (intepolator): BilinearInterpolationBlock()\n",
+      "    (relu): ReLU()\n",
+      "    (attention_map_sigmoid): Sigmoid()\n",
+      "    (attention_map_softmax): Softmax(dim=None)\n",
+      "  )\n",
+      "  (attention_block2): AttentionBlock(\n",
+      "    (conv_blockF): Conv2d(512, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "    (conv_blockG): Conv2d(512, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "    (conv_attenM): Conv2d(256, 1, kernel_size=(1, 1), stride=(1, 1))\n",
+      "    (intepolator): BilinearInterpolationBlock()\n",
+      "    (relu): ReLU()\n",
+      "    (attention_map_sigmoid): Sigmoid()\n",
+      "    (attention_map_softmax): Softmax(dim=None)\n",
+      "  )\n",
+      "  (avgpool2d): AvgPool2d(kernel_size=7, stride=1, padding=0)\n",
+      "  (maxpool2d): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (classifier): Linear(in_features=1280, out_features=2, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vgg16bn_attention)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4e313c21-f3f6-4508-9427-a7c89ae627ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer: conv_block1.0.weight, Requires Grad: True\n",
+      "Layer: conv_block1.0.bias, Requires Grad: True\n",
+      "Layer: conv_block1.1.weight, Requires Grad: True\n",
+      "Layer: conv_block1.1.bias, Requires Grad: True\n",
+      "Layer: conv_block1.3.weight, Requires Grad: True\n",
+      "Layer: conv_block1.3.bias, Requires Grad: True\n",
+      "Layer: conv_block1.4.weight, Requires Grad: True\n",
+      "Layer: conv_block1.4.bias, Requires Grad: True\n",
+      "Layer: conv_block2.0.weight, Requires Grad: True\n",
+      "Layer: conv_block2.0.bias, Requires Grad: True\n",
+      "Layer: conv_block2.1.weight, Requires Grad: True\n",
+      "Layer: conv_block2.1.bias, Requires Grad: True\n",
+      "Layer: conv_block2.3.weight, Requires Grad: True\n",
+      "Layer: conv_block2.3.bias, Requires Grad: True\n",
+      "Layer: conv_block2.4.weight, Requires Grad: True\n",
+      "Layer: conv_block2.4.bias, Requires Grad: True\n",
+      "Layer: conv_block3.0.weight, Requires Grad: True\n",
+      "Layer: conv_block3.0.bias, Requires Grad: True\n",
+      "Layer: conv_block3.1.weight, Requires Grad: True\n",
+      "Layer: conv_block3.1.bias, Requires Grad: True\n",
+      "Layer: conv_block3.3.weight, Requires Grad: True\n",
+      "Layer: conv_block3.3.bias, Requires Grad: True\n",
+      "Layer: conv_block3.4.weight, Requires Grad: True\n",
+      "Layer: conv_block3.4.bias, Requires Grad: True\n",
+      "Layer: conv_block3.6.weight, Requires Grad: True\n",
+      "Layer: conv_block3.6.bias, Requires Grad: True\n",
+      "Layer: conv_block3.7.weight, Requires Grad: True\n",
+      "Layer: conv_block3.7.bias, Requires Grad: True\n",
+      "Layer: conv_block4.0.weight, Requires Grad: True\n",
+      "Layer: conv_block4.0.bias, Requires Grad: True\n",
+      "Layer: conv_block4.1.weight, Requires Grad: True\n",
+      "Layer: conv_block4.1.bias, Requires Grad: True\n",
+      "Layer: conv_block4.3.weight, Requires Grad: True\n",
+      "Layer: conv_block4.3.bias, Requires Grad: True\n",
+      "Layer: conv_block4.4.weight, Requires Grad: True\n",
+      "Layer: conv_block4.4.bias, Requires Grad: True\n",
+      "Layer: conv_block4.6.weight, Requires Grad: True\n",
+      "Layer: conv_block4.6.bias, Requires Grad: True\n",
+      "Layer: conv_block4.7.weight, Requires Grad: True\n",
+      "Layer: conv_block4.7.bias, Requires Grad: True\n",
+      "Layer: conv_block5.0.weight, Requires Grad: True\n",
+      "Layer: conv_block5.0.bias, Requires Grad: True\n",
+      "Layer: conv_block5.1.weight, Requires Grad: True\n",
+      "Layer: conv_block5.1.bias, Requires Grad: True\n",
+      "Layer: conv_block5.3.weight, Requires Grad: True\n",
+      "Layer: conv_block5.3.bias, Requires Grad: True\n",
+      "Layer: conv_block5.4.weight, Requires Grad: True\n",
+      "Layer: conv_block5.4.bias, Requires Grad: True\n",
+      "Layer: conv_block5.6.weight, Requires Grad: True\n",
+      "Layer: conv_block5.6.bias, Requires Grad: True\n",
+      "Layer: conv_block5.7.weight, Requires Grad: True\n",
+      "Layer: conv_block5.7.bias, Requires Grad: True\n",
+      "Layer: attention_block1.conv_blockF.weight, Requires Grad: True\n",
+      "Layer: attention_block1.conv_blockG.weight, Requires Grad: True\n",
+      "Layer: attention_block1.conv_attenM.weight, Requires Grad: True\n",
+      "Layer: attention_block1.conv_attenM.bias, Requires Grad: True\n",
+      "Layer: attention_block2.conv_blockF.weight, Requires Grad: True\n",
+      "Layer: attention_block2.conv_blockG.weight, Requires Grad: True\n",
+      "Layer: attention_block2.conv_attenM.weight, Requires Grad: True\n",
+      "Layer: attention_block2.conv_attenM.bias, Requires Grad: True\n",
+      "Layer: classifier.weight, Requires Grad: True\n",
+      "Layer: classifier.bias, Requires Grad: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, param in vgg16bn_attention.named_parameters():\n",
+    "    print(f\"Layer: {name}, Requires Grad: {param.requires_grad}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "af5d3074-f3f4-424c-8c65-d50877a98597",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# summary(vgg16bn_attention, input_size=(3, 224, 224))"
+   ]
   }
  ],
  "metadata": {
